<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation"
    >

    <!-- APP -->
    <string name="app_name">Just Browser</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="menu">Menu</string>
    <string name="file_name">File name</string>

    <string name="a_new_tab">Open in new tab</string>
    <string name="a_cur_tab">Open in current tab</string>
    <string name="a_bg_tab">Open in background</string>
    <string name="a_download">Download</string>
    <string name="a_share">Share</string>
    <string name="a_incognito">Incognito tab</string>
    <string name="a_save_image">Save image</string>
    <string name="a_paste">Paste</string>
    <string name="a_paste_go">Paste and go</string>
    <string name="a_cancel">Cancel</string>
    <string name="a_add">Add</string>
    <string name="a_edit">Edit</string>
    <string name="a_delete">Delete</string>
    <string name="a_deleted">Deleted</string>
    <string name="a_copy">Copy</string>
    <string name="a_search">Search</string>
    <string name="a_okay">Okay</string>
    <string name="a_previous">Previous</string>
    <string name="a_next">Next</string>
    <string name="a_back">Back</string>
    <string name="a_open">Open</string>
    <string name="a_open_with">Open with</string>
    <string name="a_find_in_page">Find in page</string>
    <string name="a_bookmark">Bookmark</string>
    <string name="a_delete_with_file">Delete file too</string>
    <string name="a_close">Close</string>
    <string name="a_done">Done</string>
    <string name="copy_link">Copy link</string>
    <string name="delete_all">Delete all?</string>

    <string name="location_permission">Allow location</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="title">Title</string>
    <string name="title_sign_in">Sign in</string>
    <string name="title_warning">Warning</string>
    <string name="title_file_chooser">File choose</string>
    <string name="title_form_resubmission">Form resubmission</string>
    <string name="message_form_resubmission">Submit form again?</string>
    <string name="loading">Loading</string>
    <string name="not_works_in_home">Doesn\'t work in home</string>

    <string name="added_to_home">Added to home</string>
    <string name="added_to_launcher">Added to phone screen</string>
    <string name="untitled">Untitled</string>
    <string name="choose_location">Choose location</string>
    <string name="folder_name">Folder name</string>
    <string name="bookmark_title">Bookmark title</string>
    <string name="no_data">There is no data to see</string>
    <string name="item_name">Item name</string>
    <string name="url">Url</string>
    <string name="options">Options</string>
    <string name="no_internet_connection">No internet connection</string>

    <!-- BROKEN SSL MESSAGE -->
    <string name="ssl_insecure_connection">Connection to this site is not secure:\n%1$s\nProceed anyway?</string>
    <string name="ssl_cert_date_invalid">date of certificate is invalid</string>
    <string name="ssl_cert_expired">certificate is expired</string>
    <string name="ssl_cert_domain_mismatch">domain in certificate does not match the site domain</string>
    <string name="ssl_cert_invalid">certificate is invalid</string>
    <string name="ssl_cert_not_yet_valid">certificate is not yet valid</string>
    <string name="ssl_cert_untrusted">certificate is not trusted</string>

    <!-- SETTINGS -->
    <string name="settings">Settings</string>
    <string name="other_settings">Other settings</string>
    <string name="s_search_engine">Search engine</string>
    <string name="s_block_images">Block images in pages</string>
    <string name="s_privacy">Privacy Settings</string>
    <string name="s_enable_cookies">Enable cookies</string>
    <string name="s_save_history">Save history</string>
    <string name="s_restore_tabs_on_start">Restore lost tabs</string>
    <string name="s_support">Support</string>
    <string name="s_rate">Rate</string>
    <string name="s_about">About</string>
    <string name="s_text_size">Text size</string>
    <string name="s_block_js">Disable javascript</string>
    <string name="s_block_ads">Block ads</string>
    <string name="s_clear_data">Clear data</string>
    <string name="s_mouse_pad">Show MousePad</string>
    <string name="s_desktop_mode">Desktop mode</string>
    <string name="s_show_logo_in_home">Show logo in home</string>
    <string name="s_start_copy_text_listener">Start copy-text listener</string>

    <string name="downloads_all">Downloaded</string>
    <string name="downloads_running">Running</string>
    <string name="download_started">Download started</string>
    <string name="download_finished">Download is finished.</string>
    <string name="download_error">Error when downloading</string>
    <string name="re_download">Re-download</string>

    <string name="no_app_found">Application not found</string>
    <string name="please_allow_permission">Please allow permission</string>
    <string name="permission_denied">Permission denied</string>

    <string name="click_to_open_tab">Click to open tab</string>

    <!-- ODM -->
    <string name="w_running">running</string>
    <string name="w_completed">completed</string>
    <string name="w_paused">paused</string>
    <string name="w_error">error</string>
    <string name="w_cancelled">cancelled</string>
    <string name="w_waiting">waiting</string>

    <string name="title_directory_choose">Choose directory</string>
    <string name="choose">Choose</string>
    <string name="action_up">Up</string>
    <string name="rate_us_if_you_like">Rate us if you like!</string>

    <string name="url_is_empty">Url is empty</string>
    <string name="add_speed_dial">Add speed dial</string>
    <string name="error_voice_recog">There was an error</string>
    <string name="speak_now">Speak Now</string>
    <string name="speak_wait">Please wait</string>
    <string name="copied">Copied</string>
    <string name="added">Added</string>
    <string name="total_blocked_ad_row">Total {total} ads blocked in {sites} sites.</string>
    <string name="total_tab_count">I opened total {total} tabs.</string>
    <string name="total_url_count">Also loaded pages {total} times.</string>
    <string name="adblocking">AdBlocking</string>
    <string name="history">History</string>
    <string name="bookmarks">Bookmarks</string>

    <string name="sup_title1">What does Just Browser do?</string>
    <string name="sup_title1_sub">Just Browser is a mobile browser for you and has these things:</string>
    <string name="sup_title2">What doesn\'t Just Browser do?</string>
    <string name="sup_title2_sub">Just Browser doesn\'t do what other\'s do:</string>
    <string name="sup_title3">How can I support?</string>
    <string name="sup_title3_sub">There is a way for you to support Just Browser project. You can buy PRO license key. This will help me to maintain project and spend more time at it. Also there will not be 15 tabs limit.</string>
    <string name="thanks_for_support">Thank you so much for supporting Just Browser.</string>
    <string name="tab_opened_in_bg">Tab opened in background</string>
    <string name="cleaned">Cleaned</string>
    <string name="exit">Exit</string>
    <string name="my_stats">My Stats</string>
    <string name="update_dialog_title">Update Available</string>
    <string name="update_dialog_content">You can update Just Browser. There is a new version.</string>
    <string name="update">Update</string>
    <string name="be_pro_dialog_title">Be PRO</string>
    <string name="be_pro_dialog_content">You have 15 tabs limit. If you buy PRO version there will not be a limit.</string>
    <string name="support">Support!</string>
    <string name="be_pro_dialog2_content">It looks like you like the app! Why not buy Pro license to support Just Browser? Thank you.</string>
    <string name="buy">Buy</string>
    <string name="details">Details</string>
    <string name="second_menu_remind_dialog_title">Swipe bottom menu</string>
    <string name="second_menu_remind_dialog_content">You can swipe bottom menu to right and left. This is just a reminder if you did not see it yet.</string>
    <string name="popup_blocked">Popup blocked</string>
    <string name="provide_url_and_title">Please provide an url and title</string>
    <string name="themes">Themes</string>
    <string name="reload_tab">Reload tab</string>
    <string name="desktop_mode">Set desktop mode</string>
    <string name="phone_mode">Set phone mode</string>

    <string-array name="search_engine_list_entries">
        <item>DuckDuckGo</item>
        <item>Google</item>
        <item>Yahoo</item>
        <item>Bing</item>
        <item>Yandex</item>
    </string-array>

    <string-array name="settings_text_size_entries">
        <item>XSmall</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Xlarge</item>
    </string-array>

</resources>
