<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Wrapper">

    <com.browser.ui.widget.JTV
        android:id="@+id/TitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="10dp"
        android:gravity="left"
        android:textSize="20sp"
        android:text="@string/title_directory_choose"
        />

    <com.browser.ui.widget.JTV
        android:id="@+id/CurrentFolderNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_marginTop="5dp"
        android:padding="4dp"
        />

    <ListView
        android:id="@+id/ListView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        >

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <com.browser.ui.dialog.JDialogButton
            android:id="@+id/ChooseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose"
            android:layout_marginRight="20dp"
            android:textAllCaps="true"
            />

        <com.browser.ui.dialog.JDialogButton
            android:id="@+id/UpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_up"
            android:layout_marginRight="10dp"
            android:textAllCaps="true"
            />

    </LinearLayout>

</LinearLayout>